--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <title>Shuki</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/utils/collision.js"></script>
+    <script type="text/javascript" src="js/utils/keyboard.js"></script>
+    <script type="text/javascript" src="js/utils/text.js"></script>
+    <script type="text/javascript" src="js/elements/player.js"></script>
+    <script type="text/javascript" src="js/elements/wall.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <div class="title">
-
+    <canvas id="game" width="840" height="460"></canvas>
     <div/>
   </body>
 </html>
