--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="js/utils/collision.js"></script>
     <script type="text/javascript" src="js/utils/keyboard.js"></script>
-    <script type="text/javascript" src="js/elements/enemy.js"></script>
+    <script type="text/javascript" src="js/elements/enemys.js"></script>
     <script type="text/javascript" src="js/utils/text.js"></script>
     <script type="text/javascript" src="js/elements/player.js"></script>
     <script type="text/javascript" src="js/elements/wall.js"></script>
